fix https://github.com/prayagupd/smartad/issues/2